<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="itesm.mx.helppet.AgregarMascotaFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/encontre"
        android:id="@+id/textView10"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dogb"
        android:layout_marginTop="31dp"
        android:src="@drawable/bluedog"
        android:layout_below="@+id/textView10"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="#00ffffff" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nombreEditText"
        android:layout_below="@+id/dogb"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/nombrePerrito" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/catb"
        android:layout_alignTop="@+id/dogb"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:src="@drawable/blackcat"
        android:background="#00ffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/categoria"
        android:id="@+id/textView21"
        android:layout_below="@+id/nombreEditText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/categoriaspinner"
        android:layout_below="@+id/nombreEditText"
        android:layout_toRightOf="@+id/dogb"
        android:layout_toEndOf="@+id/dogb" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tamanio"
        android:id="@+id/textView22"
        android:layout_below="@+id/categoriaspinner"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tamaniospinner"
        android:layout_below="@+id/categoriaspinner"
        android:layout_alignLeft="@+id/categoriaspinner"
        android:layout_alignStart="@+id/categoriaspinner" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/edad"
        android:id="@+id/textView23"
        android:layout_below="@+id/tamaniospinner"
        android:layout_alignRight="@+id/textView22"
        android:layout_alignEnd="@+id/textView22" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edadspinner"
        android:layout_below="@+id/tamaniospinner"
        android:layout_alignLeft="@+id/tamaniospinner"
        android:layout_alignStart="@+id/tamaniospinner" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guardar"
        android:id="@+id/registrar"
        android:background="@color/colorPrimary"
        android:textColor="#ffffff"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/edadspinner"
        android:layout_alignEnd="@+id/edadspinner" />

</RelativeLayout>
