<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="itesm.mx.helppet.IdentificaFragment">


    <Button
        android:onClick="buscar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buscar"
        android:id="@+id/buscar"
        android:background="@color/colorPrimary"
        android:textColor="#FFF"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ImageButton
        android:onClick="casabtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/homei"
        android:src="@drawable/homeb"
        android:background="#00ffffff"
        android:layout_alignTop="@+id/departamentoi"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="5dp" />

    <ImageButton
        android:onClick="mansionbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mansioni"
        android:src="@drawable/luxuryg"
        android:background="#00ffffff"
        android:layout_above="@+id/textView7"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="5dp" />

    <ImageButton
        android:onClick="departamentobtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/departamentoi"
        android:src="@drawable/apartmentg"
        android:background="#00ffffff"

        android:layout_below="@+id/textView9"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/vives"
        android:id="@+id/textView9"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tiempo"
        android:id="@+id/textView7"
        android:layout_below="@+id/homei"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner_tiempo"
        android:layout_below="@+id/textView7"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/entrenamiento"
        android:id="@+id/textView14"
        android:layout_below="@+id/spinner_tiempo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner_entrenamiento"
        android:layout_below="@+id/textView14"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/ejercicio"
        android:id="@+id/textView15"
        android:layout_below="@+id/spinner_entrenamiento"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner_ejercicio"
        android:layout_below="@+id/textView15"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp" />

</RelativeLayout>
