<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="itesm.mx.helppet.AprendeActivity">


    <ImageButton
        android:onClick="antes"
        android:src="@drawable/antes_b"

        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:text="@string/antesadoptar"
        android:id="@+id/button_antes"
        android:background="#00ffffff"
        android:textColor="#004bc4"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="65dp" />

    <ImageButton
        android:onClick="cuidados"
        android:src="@drawable/cuidados_b"

        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:text="@string/cuidadosbasicos"
        android:id="@+id/button_viviendo"
        android:background="#00ffffff"
        android:textColor="#004bc4"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:layout_alignTop="@+id/button_antes"
        android:layout_toRightOf="@+id/button_antes"
        android:layout_toEndOf="@+id/button_antes" />

    <ImageButton
        android:onClick="veterinaria"
        android:src="@drawable/veterinarias_b"

        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:text="@string/viviendoconmascota"
        android:id="@+id/button_veterinaria"
        android:background="#00ffffff"
        android:textColor="#004bc4"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:layout_below="@+id/button_antes"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="50dp" />

    <ImageButton
        android:onClick="hotel"
        android:src="@drawable/hotel_b"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:text="@string/viviendoconmascota"
        android:id="@+id/button_hotel"
        android:background="#00ffffff"
        android:textColor="#004bc4"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:layout_alignTop="@+id/button_veterinaria"
        android:layout_toRightOf="@+id/button_veterinaria"
        android:layout_toEndOf="@+id/button_veterinaria" />
</RelativeLayout>
